# audio-embedding-explorer

./: .env  .env.template  .gitignore  CHANGELOG.md  PROJECT_STRUCTURE.md  README.md  README.md.orig  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements.txt.orig
.github/workflows/: ruff.yml
.streamlit/: config.toml
assets/pseudo_captioning/atoms/: music_level_atoms.json  sound_level_atoms.json
assets/pseudo_captioning/captions/: music_level_captions.json  sound_level_captions.json
data/: README_db.md  app.db  check_db.py  const.py  ingest_audio.py  init_db.py  run_sql.py  schema.sql  seed_models.sql  verify_db.py
data/captions/: generate_captions.py
src/: app.py  application.py
src/app/: application.py
src/config/: env_keys.py  error_messages.py  navbar_config.py
src/domain/: db_manager.py  metrics.py  visualization.py
src/domain/embeddings/: base_embedder.py  base_embedders.py  clap_embedder.py  embedders_manager.py  embeddings_manager.py  mert_embedder.py  models_manager.py  open_l3_embedder.py  openl3_embedder.py  panns_embedder.py  stored_model.py
src/models/dataclasses/: embedding_result.py  model_env.py  model_option.py  project_paths.py
src/models/enums/: available_models.py  embedders_models.py  modalities.py  reduce_dimensions_method.py  view_names.py
src/ui/: database_management_view.py  embeddings_playground_view.py  home_view.py  local_db_view.py  model_comparison_view.py  pair_analysis_view.py  pseudo_captioning_view.py  similarity_ranking_view.py
src/ui/shared/: audio_edit_view.py  base_view.py  model_status_label.py
src/utils/: audio_utils.py  env_loader.py  import_utils.py  path_resolver.py
